--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link
       rel="icon"
-      href="https://raw.githubusercontent.com/callmecposu/notepalweb-frontend/main/public/icon.ico"
+      href="../src/assets/logo.png"
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link
