--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link
       rel="icon"
-      href="../src/assets/logo.png"
+      href="../src/assets/logo.png" type="image/png"
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link
