--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       href="./icon.ico" type="image/x-icon"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>NotePal</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
